add Readme file

--- a/blog.html
+++ b/blog.html
@@ -1,65 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Infomation</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="sidebar sidebarGo">
-            <div class="intro">
-                <img src="img/images.png" alt="introduction" width="33px">
-                Intro
-            </div>
-            <nav>
-                <ul>
-                    <li> <a href="index.html">Home</a></li>
-                    <li> <a href="About.html">About</a></li>
-                    <li> <a href="intro.html">My Intro</a></li>
-                    <li> <a href="blog.html">Blog</a></li>
-                    <li> <a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
+      <div class="sidebar sidebarGo">
+        <div class="intro">
+          <img src="img/images.png" alt="introduction" width="33px" />
+          Intro
         </div>
-        <div class="blogcontent">
-            <div class="humberger">
-                <img class="hum" src="img/humberger.png" alt="humberger" width="25px">
-                <img class="cross" src="img/cross.png" alt="cross" width="15px">
-            </div>
-<div class="blogs">
-    <div class="boxs_1"> 
-        <div class="btn"><button>Open</button>
-    </div>
-    </div>
-    <div class="boxs_2">
-        <div class="btn"><button>Open</button></div>
-    </div>
-    <div class="boxs_3"> 
-        <div class="btn"><button>Open</button></div>
-    </div>
-    <div class="boxs_4"> 
-        <div class="btn"><button>Open</button></div>
-    </div>
-    <div class="boxs_5"> 
-        <div class="btn"><button>Open</button></div>
-    </div>
-    <div class="boxs_6"> 
-        <div class="btn"><button>Open</button></div>
-    </div>
-  
-</div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="intro.html">My Intro</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="blogcontent">
+        <div class="humberger">
+          <img
+            class="hum"
+            src="img/humberger.png"
+            alt="humberger"
+            width="25px"
+          />
+          <img class="cross" src="img/cross.png" alt="cross" width="15px" />
         </div>
+        <div class="blogs">
+          <div class="boxs_1">
+            <div class="btn"><button>Open</button></div>
+          </div>
+          <div class="boxs_2">
+            <div class="btn"><button>Open</button></div>
+          </div>
+          <div class="boxs_3">
+            <div class="btn"><button>Open</button></div>
+          </div>
+          <div class="boxs_4">
+            <div class="btn"><button>Open</button></div>
+          </div>
+          <div class="boxs_5">
+            <div class="btn"><button>Open</button></div>
+          </div>
+          <div class="boxs_6">
+            <div class="btn"><button>Open</button></div>
+          </div>
+        </div>
+      </div>
     </div>
-   
-
-
-
+    <footer>
+        <div class="container">
+            <div class="introfot">
+                <img src="/img/images.png" alt="Intro" width="50">
+               <h1>Intro</h1>
+            </div>
+            <div class="foot">
+                <h3>Personal Potfolio web</h3>
+                <h4><a href="/index.html">Home</a></h4>
+                <h4><a href="/About.html">About</a></h4>
+                <h4><a href="/blog.html">Blog</a></h4>
+                <h4><a href="/intro.html">Intro</a></h4>
+                <h4><a href="/contact.html">Contact Us</a></h4>
+            </div>
+            <div class="foot">
+                <h3>Our Services</h3>
+                <h4>Web Developments</h4>
+                <h4>SEO Backlink Services</h4>
+                <h4>App Development</h4>
+                <h4>Full Stack Development</h4>
+                <h4><a href="/contact.html">Contact Us</a></h4>
+            </div>
+        </div>
+        <p>© 2023 - Intro website www.intro.com Best Developments services</p>
+    </footer>
 
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
