--- a/intro.html
+++ b/intro.html
@@ -42,9 +42,32 @@
                     As I continue to explore and contribute to the world of web development, I look forward to creating innovative and accessible online experiences that make a positive impact. Thank you for joining me on this exciting journey!</p>
             </div>
         </div>
-
-
     </div>
+    <footer>
+        <div class="container">
+            <div class="introfot">
+                <img src="/img/images.png" alt="Intro" width="50">
+               <h1>Intro</h1>
+            </div>
+            <div class="foot">
+                <h3>Personal Potfolio web</h3>
+                <h4><a href="/index.html">Home</a></h4>
+                <h4><a href="/About.html">About</a></h4>
+                <h4><a href="/blog.html">Blog</a></h4>
+                <h4><a href="/intro.html">Intro</a></h4>
+                <h4><a href="/contact.html">Contact Us</a></h4>
+            </div>
+            <div class="foot">
+                <h3>Our Services</h3>
+                <h4>Web Developments</h4>
+                <h4>SEO Backlink Services</h4>
+                <h4>App Development</h4>
+                <h4>Full Stack Development</h4>
+                <h4><a href="/contact.html">Contact Us</a></h4>
+            </div>
+        </div>
+        <p>© 2023 - Intro website www.intro.com Best Developments services</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 
