--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li> <a href="index.html">Home</a></li>
                     <li> <a href="About.html">About</a></li>
                     <li> <a href="intro.html">My Intro</a></li>
-                    <li> <a href="blog.html">Blog</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li> <a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -77,6 +77,31 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="container">
+            <div class="introfot">
+                <img src="/img/images.png" alt="Intro" width="50">
+               <h1>Intro</h1>
+            </div>
+            <div class="foot">
+                <h3>Personal Potfolio web</h3>
+                <h4><a href="/index.html">Home</a></h4>
+                <h4><a href="/About.html">About</a></h4>
+                <h4><a href="/blog.html">Blog</a></h4>
+                <h4><a href="/intro.html">Intro</a></h4>
+                <h4><a href="/contact.html">Contact Us</a></h4>
+            </div>
+            <div class="foot">
+                <h3>Our Services</h3>
+                <h4>Web Developments</h4>
+                <h4>SEO Backlink Services</h4>
+                <h4>App Development</h4>
+                <h4>Full Stack Development</h4>
+                <h4><a href="/contact.html">Contact Us</a></h4>
+            </div>
+        </div>
+        <p>© 2023 - Intro website www.intro.com Best Developments services</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 
